# zerodash

./: .editorconfig  .env  .env.example  .gitignore  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/homepage/: package.json  tailwind.config.ts
apps/homepage/src/app/: globals.css  layout.tsx
apps/homepage/src/app/(app)/(home)/: HomePage.tsx
apps/homepage/src/app/(auth)/: layout.tsx
apps/homepage/src/app/(auth)/login/: LoginPage.tsx
apps/homepage/src/app/(auth)/reset-password/: ResetPassword.tsx
apps/homepage/src/app/(auth)/signup/: SignupPage.tsx
apps/homepage/src/components/: Task.tsx
apps/homepage/src/modules/auth/: auth_service.ts
apps/homepage/src/services/: request.ts
apps/server/: Cargo.toml
apps/server/migrations/: 01-initialize.surql
apps/server/src/: cors.rs  lib.rs  main.rs
apps/server/src/lunar/: database.rs  errors.rs  lunar_app.rs  mod.rs  prelude.rs  res.rs  utils.rs
apps/server/src/modules/: mod.rs
apps/server/src/modules/auth/: auth_controller.rs  auth_dto.rs  auth_middleware.rs  auth_model.rs  auth_service.rs  mod.rs  session_model.rs
apps/server/src/modules/auth/dto/: create_session_dto.rs  login_dto.rs  mod.rs  register_dto.rs  token_login_dto.rs
apps/server/src/modules/auth/email/: verify_email.rs
apps/server/src/modules/auth/extractors/: session_token.rs
apps/server/src/modules/auth/model/: exchange_token_model.rs  mod.rs  session_model.rs
apps/server/src/modules/boards/: board_controller.rs  board_service.rs  mod.rs
apps/server/src/modules/boards/dto/: create_board_dto.rs  mod.rs  update_board_dto.rs
apps/server/src/modules/boards/model/: board_model.rs  mod.rs  task_states_model.rs
apps/server/src/modules/home/: home_controller.rs  mod.rs
apps/server/src/modules/spaces/: mod.rs  space_controller.rs  space_service.rs
apps/server/src/modules/spaces/dto/: create_space_dto.rs  mod.rs  update_space_dto.rs
apps/server/src/modules/spaces/model/: mod.rs  space_model.rs  user_space_model.rs  user_space_role.rs
apps/server/src/modules/spaces/serializers/: get_spaces_serializer.rs  mod.rs
apps/server/src/modules/tasks/: mod.rs  task_dto.rs  task_model.rs  task_service.rs  tasks_controller.rs
apps/server/src/modules/users/: mod.rs  user_controller.rs  user_model.rs
apps/server/src/modules/users/model/: mod.rs  user_model.rs
apps/server/src/utils/: hash.rs  mod.rs
apps/web/: README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: index.css  main.tsx  router.tsx
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(auth)/change-password/: ChangePasswordPage.tsx
apps/web/src/app/(auth)/login/: LoginPage.tsx
apps/web/src/app/(auth)/reset-password/: ResetPassword.tsx
apps/web/src/app/(auth)/signup/: SignupPage.tsx
apps/web/src/app/(home)/: HomePage.tsx
apps/web/src/components/: DialogProvider.tsx  Logo.tsx  ProfilePicture.tsx  Task.tsx
apps/web/src/components/Sidebar/: Profile.tsx  Sidebar.tsx  Space.tsx  SpaceModal.tsx
apps/web/src/components/ui/: Button.tsx  Modal.tsx  TitleInput.tsx
apps/web/src/layers/: initialization_layer.tsx
apps/web/src/layouts/: DashboardLayout.tsx  RootLayout.tsx
apps/web/src/libs/: utils.ts
apps/web/src/modules/auth/: auth_service.ts
apps/web/src/modules/boards/: board_model.ts
apps/web/src/modules/dialog/: dialog_provider.ts
apps/web/src/modules/spaces/: index.ts  space_model.ts  space_provider.ts  space_service.ts
apps/web/src/modules/user/: index.ts  user_model.ts  user_provider.ts  user_service.ts
apps/web/src/screens/auth/: Callback.tsx  Logout.tsx
apps/web/src/screens/calendar/: CalendarScreen.tsx
apps/web/src/screens/home/: HomeScreen.tsx
apps/web/src/services/: request.ts
apps/web/src/styles/: index.css  tiptap.css
libs/lunarus/: Cargo.toml
libs/lunarus/src/: app.rs  context.rs  database.rs  errors.rs  lib.rs  mail.rs  prelude.rs  res.rs  template.rs  validator.rs
libs/web-core/: package.json
libs/web-core/src/: exception.ts  libs.ts  request.ts  utils.ts
src/: main.rs
