[workspace]
members = ["apps/server", "libs/lunarus"]
resolver = "2"

[workspace.dependencies]
# local libs
lunarus = { version = "*", path = "./libs/lunarus" }

# third-party libs
axum = "0.7.4"
tokio = "1.40.0"
serde = "1"
serde_json = "1"
dotenvy = "0.15.7"
tracing = "0.1.40"
thiserror = "1.0"
tracing-subscriber = "0.3.18"
surrealdb = "2.0.3"
validator = { version = "0.18" }
garde = { version = "0.20.0" }
regex = "1.11.0"
chrono = "0.4.38"
rusty-sidekiq = "0.11.1"
async-trait = "0.1.83"
