[package]
name = "zerodash-server"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
lunarus = { workspace = true }
