[package]
name = "zerodash-server"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
lunarus = { workspace = true }
validator = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
surrealdb = { workspace = true }
chrono = { workspace = true }
argon2 = { version = "0.5.3" }
regex = "1.11.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
