[package]
name = "zerodash-server"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
lunarus = { workspace = true }
garde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
surrealdb = { workspace = true }
chrono = { workspace = true }
axum-extra = { workspace = true, features = ["cookie-signed"] }
cookie = { workspace = true }
rand_chacha = { workspace = true, features = ["default"] }
tower-http = { workspace = true, features = ["cors"] }
argon2 = { version = "0.5.3" }
regex = "1.11.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
serde_with_macros = { version = "3.11.0" }
time = { version = "0.3" }
base64 = "0.22.1"
