[package]
name = "lunarus"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["net"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
surrealdb = { workspace = true }
validator = { workspace = true, features = ["derive"] }
garde = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
handlebars = { workspace = true }
cookie = { workspace = true }
tower-http = { workspace = true, features = ["normalize-path", "trace"] }
axum-extra = { workspace = true, features = ["cookie-signed"] }
colored = "2.1.0"
